[tool.poetry]
name = "dblib"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "^0.0.8"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
aiosqlite = { version = "^0.18.0", optional = true }
asyncpg = { version = "^0.27.0", optional = true }

[tool.poetry.extras]
sqlite = ["aiosqlite"]
postgres = ["asyncpg"]

[tool.poetry.group.dev.dependencies]
isort = "^5.11.4"
black = "^22.12.0"
mypy = "^0.991"
flake8 = "^6.0.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
radon = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
